--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gsap": "^2.1.1",
     "less": "^3.9.0",
     "less-watch-compiler": "^1.13.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "react-transition-group": "^2.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
